--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ main {
 
 .team-list-header, .team-list-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(7, 1fr);
     gap: 10px;
     align-items: center;
     padding: 10px 20px;
@@ -63,6 +63,12 @@ main {
     border-radius: 5px;
 }
 
-.team-details p {
+.team-details div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.team-details div span {
     margin: 0;
 }
