--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ main {
 
 .team-list-header, .team-list-item {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: 2fr 1fr 1fr 2fr 2fr 2fr 2fr;
     gap: 10px;
     align-items: center;
     padding: 10px 20px;
