--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ main {
     grid-template-columns: 2fr 1fr 1fr 2fr 2fr 2fr 2fr;
     gap: 10px;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0 20px;
     margin-bottom: 10px;
     border-radius: 5px;
 }
@@ -57,6 +57,8 @@ main {
     font-weight: bold;
     height: 50px; /* Set a fixed height for the header */
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    border: 1px solid white; /* Add border to the entire header */
+    display: flex; /* Use flexbox to align items */
 }
 
 .team-list-header div {
@@ -64,10 +66,14 @@ main {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
-    border: 1px solid white; /* Add border to header cells */
-    box-sizing: border-box; /* Ensure the borders are included in the element's width and height */
     height: 100%; /* Make the div fill the height of the header */
     padding: 0 10px; /* Adjust padding for better spacing */
+    flex-grow: 1; /* Ensure divs grow to fill the available space */
+    border-right: 1px solid white; /* Add right border to create cell effect */
+}
+
+.team-list-header div:last-child {
+    border-right: none; /* Remove the right border from the last header cell */
 }
 
 .team-list-item {
