--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,12 @@ main {
     margin-left: 5px;
     display: inline-block;
 }
+
+.team-link {
+    text-decoration: none;
+    color: #1a5f7a;
+}
+
+.team-link:hover {
+    text-decoration: underline;
+}
