--- a/styles.css
+++ b/styles.css
@@ -206,15 +206,13 @@ main {
 
 /* Center the matchups in later rounds */
 .round-2 .matchup {
-    position: absolute;
+    position: relative;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
 }
 
 .round-3 .matchup {
-    position: absolute;
+    position: relative;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
 }
